--- a/administration/templates/administration/users.html
+++ b/administration/templates/administration/users.html
@@ -23,10 +23,10 @@
                                 <span class="glyphicon glyphicon-remove"></span>
                             </a>
                             <a href="#" class="btn btn-primary btn-sm" title="add to group">
-                                G
+                                <span class="glyphicon glyphicon-user"></span>
                             </a>
                             <a href="#" class="btn btn-primary btn-sm" title="make user to admin">
-                                A
+                                <span class="glyphicon glyphicon-hand-up"></span>
                             </a>
                         </th>
                     </tr>
