--- a/administration/templates/administration/new_group.html
+++ b/administration/templates/administration/new_group.html
@@ -17,7 +17,7 @@
 		  				<input type="email" class="form-control input-lg" placeholder="Email" name="email" required/>
 		  			</div>
 					<div class="form-group">
-						<input type="phone" class="form-control input-lg" placeholder="phonenumber" name="#"  rows="4" required></textarea>
+						<input type="phone" class="form-control input-lg" placeholder="Phonenumber" name="phone" required></textarea>
 					</div>		
 					<div class="form-group">
              				<p id="choose-location-text">If you do not like to use your standard location choose an other one.
