--- a/administration/templates/administration/base_admin.html
+++ b/administration/templates/administration/base_admin.html
@@ -24,8 +24,7 @@
 		}
 		html, body {
 			height: 100%;
-			/*font-size: 1em;*/
-			/*font-size: 18px;*/
+			font-size: 1em;
 		}
 		#wrapper {
 			position: relative;
@@ -67,15 +66,16 @@
 
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="navbar-collapse">
-						<ul class="nav navbar-nav navbar-left">
-							<li {% if "/administration/mails/" in request.path %} class="active" {% endif %}><a href="{% url 'administration:mails' %}">Mails</a></li>
-							<li {% if "/administration/needs/" in request.path %} class="active" {% endif %}><a href="{% url 'administration:needs' %}">Needs</a></li>
-							<li {% if "/administration/informations/" in request.path %} class="active" {% endif %}><a href="{% url 'administration:informations' %}">Informations</a></li>
-							<li {% if "/administration/users/" in request.path %} class="active" {% endif %}><a href="{% url 'administration:users' %}">Users</a></li>
-							<li {% if "/administration/groups/" in request.path %} class="active" {% endif %}><a href="{% url 'administration:groups' %}">Groups</a></li>
-							<li {% if "/administration/categories/" in request.path %} class="active" {% endif %}><a href="{% url 'administration:categories' %}">Categories</a></li>
-						</ul>
-
+                        <div id="navbar-with-divider">
+						    <ul class="nav navbar-nav navbar-left">
+							    <li {% if "/administration/mails/" in request.path %} class="active" {% endif %}><a href="{% url 'administration:mails' %}">Mails</a></li>
+							    <li {% if "/administration/needs/" in request.path %} class="active" {% endif %}><a href="{% url 'administration:needs' %}">Needs</a></li>
+							    <li {% if "/administration/informations/" in request.path %} class="active" {% endif %}><a href="{% url 'administration:informations' %}">Informations</a></li>
+							    <li {% if "/administration/users/" in request.path %} class="active" {% endif %}><a href="{% url 'administration:users' %}">Users</a></li>
+							    <li {% if "/administration/groups/" in request.path %} class="active" {% endif %}><a href="{% url 'administration:groups' %}">Groups</a></li>
+							    <li {% if "/administration/categories/" in request.path %} class="active" {% endif %}><a href="{% url 'administration:categories' %}">Categories</a></li>
+						    </ul>
+                        </div>
 						<ul class="nav navbar-nav navbar-right">
 							<li id="navbar-with-divider" {% if "/home/" in request.path %} class="active" {% endif %}><a href="{% url 'basics:home' %}">User Area</a></li>
 							<li><a href="{% url 'basics:logout' %}">Logout</a></li>
