--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -1,7 +1,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta http-equiv="X-UA-Compatible"  content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 		<title>Act of Goods</title>
@@ -24,8 +24,7 @@
 		}
 		html, body {
 			height: 100%;
-			/*font-size: 1em;*/
-			/*font-size: 18px;*/
+			font-size: 1em;
 		}
 		#wrapper {
 			position: relative;
@@ -69,21 +68,20 @@
 					<div class="collapse navbar-collapse" id="navbar-collapse">
 						<ul class="nav navbar-nav navbar-left">
 							<li {% if "/home/" in request.path %} class="active" {% endif %}><a href="{% url 'basics:home' %}">Home</a></li>
-
 							<li {% if "/needs" in request.path %} class="dropdown active" {% else %} class="dropdown" {% endif %}>
 								<a id="navbar-dropdown" href="#" class="dropdown-toggle" data-toggle="dropdown">Needs <span class="caret"></span></a>
 								<ul id="navbar-dropdown-menu" class="dropdown-menu">
-									<li><a href="{% url 'basics:needs_all' %}">All</a></li>
-									<li><a href="{% url 'basics:needs_new' %}">New</a></li>
-									<li><a href="{% url 'basics:needs_timeline' %}">Timeline</a></li>
+									<li {% if "/needs_all/" in request.path %} id="active-dropdown" {% endif %}><a href="{% url 'basics:needs_all' %}">All</a></li>
+									<li {% if "/needs_new/" in request.path %} id="active-dropdown" {% endif %}><a href="{% url 'basics:needs_new' %}">New</a></li>
+									<li{% if "/needs_timeline/" in request.path %} id="active-dropdown" {% endif %}><a href="{% url 'basics:needs_timeline' %}">Timeline</a></li>
 								</ul>
 							</li>					<!-- insert URL for needs and create if for class = active-->
 							<li {% if "/information" in request.path %} class="dropdown active" {% else %} class="dropdown" {% endif %}>
 								<a id="navbar-dropdown" href="#" class="dropdown-toggle" data-toggle="dropdown">Information <span class="caret"></span></a>
 								<ul id="navbar-dropdown-menu" class="dropdown-menu">
-									<li><a href="{% url 'basics:information_all' %}">All</a></li>
-									<li><a href="{% url 'basics:information_new' %}">New</a></li>
-									<li><a href="{% url 'basics:information_timeline' %}">Timeline</a></li>
+									<li {% if "/information_all/" in request.path %} id="active-dropdown" {% endif %}><a href="{% url 'basics:information_all' %}">All</a></li>
+									<li {% if "/information_new/" in request.path %} id="active-dropdown" {% endif %}><a href="{% url 'basics:information_new' %}">New</a></li>
+									<li {% if "/information_timeline/" in request.path %} id="active-dropdown" {% endif %}><a href="{% url 'basics:information_timeline' %}">Timeline</a></li>
 								</ul>
 							</li>					<!-- insert URL for needs and create if for class = active-->
 							<li id="navbar-with-divider" {% if "/chat/" in request.path %} class="active" {% endif %}><a href="{% url 'basics:chat' %}">Chats</a></li>
@@ -121,19 +119,31 @@
 						</a>
 					</div>
 
-
-
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="navbar-collapse">
-						<ul class="nav navbar-nav navbar-left">
-							<li {% if "/aboutus/" not in request.path and "/privacy/" not in request.path and "/immediate_aid/" not in request.path %} class="active" {% endif %}><a href="{% url 'basics:login' %}">Home</a></li>
-							<li id="navbar-with-divider" {% if "/aboutus/" in request.path %} class="active" {% endif %}><a href="{% url 'basics:aboutus'%}"><span class="glyphicons glyphicons-group" aria-hidden="true"></span> About Us</a></li>
-						</ul>
+                        <div id="navbar-with-divider">
+						    <ul class="nav navbar-nav navbar-left">
+							    <li {% if "/aboutus/" not in request.path and "/privacy/" not in request.path and "/immediate_aid/" not in request.path %} class="active" {% endif %}><a href="{% url 'basics:login' %}">Home</a></li>
+							    <li {% if "/aboutus/" in request.path %} class="active" {% endif %}><a href="{% url 'basics:aboutus'%}"><span class="glyphicons glyphicons-group" aria-hidden="true"></span> About Us</a></li>
+						    </ul>
+                        </div>
 						<ul class="nav navbar-nav navbar-right">
-							<li><p class="navbar-text">Already have an account?</p></li>
-							<li class= {% if messages %} {% for message in messages %}{% if message.message == 'lw' %}"dropdown open" {% else %} "dropdown" {% endif %}
-    							{% endfor %}
-							{% endif %}>
+							<li>
+                                <div id="navbar-text">
+                                    <p class="navbar-text">Already have an account?</p>
+                                </div>
+                            </li>
+							<li class=  {% if messages %}
+                                            {% for message in messages %}
+                                                {% if message.message == 'lw' %}
+                                                    "dropdown open"
+                                                {% else %}
+                                                    "dropdown"
+                                                {% endif %}
+    							            {% endfor %}
+							            {% else %}
+                                            "dropdown"
+                                        {% endif %}>
 								<a id="navbar-login" href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
 								<ul id="login-dp" class="dropdown-menu">
 									<li>
@@ -152,15 +162,15 @@
 													{% endif %}
 													<div class="form-group">
 														<label class="sr-only" for="InputEmail">Email</label>
-														<input type="text" class="form-control" name="email" placeholder="Email address" required>
+														<input type="text" class="form-control input-lg" name="email" placeholder="Email" required>
 													</div>
 													<div class="form-group">
 														<label class="sr-only" for="InputPassword">Password</label>
-														<input type="password" class="form-control" name="password" placeholder="Password" required>
+														<input type="password" class="form-control input-lg" name="password" placeholder="Password" required>
 														<div class="help-block text-right"><a id="reset-password-link" href="{% url 'basics:reset_password_page'%}">Forgot the password?</a></div>
 													</div>
 													<div class="form-group">
-														<button type="submit" id="login" class="btn btn-primary btn-block">Sign in</button>
+														<button type="submit" id="login" class="btn btn-primary btn-block btn-lg">Sign in</button>
 													</div>
 													<div class="checkbox" >
 														<label>
