groups can be deleted, added model to add users to groups (without function)

--- a/administration/templates/administration/groups.html
+++ b/administration/templates/administration/groups.html
@@ -21,9 +21,11 @@
                             <a href="#" class="btn btn-warning btn-sm" title="edit">
                                 <span class="glyphicon glyphicon-pencil"></span>
                             </a>
-                            <a href="#" class="btn btn-danger btn-sm" title="delete">
+                            <a href="{% url 'administration:group_delete' pk=group.pk %}" class="btn btn-danger btn-sm" title="delete">
                                 <span class="glyphicon glyphicon-remove"></span>
                             </a>
+                            <p id="choose-user-text">
+                            {% include "administration/choose_user.html" %}</p>
                         </th>
                     </tr>
                     {% endfor %}
