--- a/basics/templates/basics/map_testing.html
+++ b/basics/templates/basics/map_testing.html
@@ -350,7 +350,7 @@
 					</div>
 				</div>
 				<div class="form-group" id="location-form">
-					<p id="option"><b>3. Option: </b>Click the map at your disired location.</p>
+					<p id="option"><b>3. Option: </b>Click the map at your desired location.</p>
 					<div id="map-container"></div>
 				</div>
 
