--- a/administration/templates/administration/choose_user.html
+++ b/administration/templates/administration/choose_user.html
@@ -64,8 +64,10 @@
 					<input type="submit" class="btn btn-block btn-lg btn-primary" value="Add User"/>
 				</div>
 			</div><!-- modal-body -->
-	        <div class="form-group">
-				<button type="button" class="btn btn-primary" data-dismiss="modal">Done</button>
+			<div class="modal-footer">
+	        	<div class="form-group">
+					<button type="button" class="btn btn-primary" data-dismiss="modal">Done</button>
+	        	</div>
 	        </div>
       	</div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
