admin can make users to admin, other fixes

--- a/administration/templates/administration/categories.html
+++ b/administration/templates/administration/categories.html
@@ -1,4 +1,8 @@
 {% extends 'administration/base_admin.html' %}
 {% block content %}
 
+{% for categorie in categories %}
+	{{ categorie.name }}
+{% endfor %}
+
 {% endblock %}
