--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -89,7 +89,7 @@
 
 						<ul class="nav navbar-nav navbar-right">
 							{% if user.is_staff %}
-								<li id="navbar-with-divider" {% if "/administration/mails/" in request.path %} class="active" {% endif %}><a href="{% url 'administration:mails' %}">Administration</a></li>
+								<li id="navbar-with-divider" {% if "/administration/requests/" in request.path %} class="active" {% endif %}><a href="{% url 'administration:requests' %}">Administration</a></li>
 							{% else %}
 							<li {% if "/help/" in request.path %} class="active" {% endif %}><a href="{% url 'basics:help'%}">Help</a></li>
 							{% endif %}
