--- a/basics/templates/basics/contact_us.html
+++ b/basics/templates/basics/contact_us.html
@@ -10,12 +10,11 @@
 			<div class="modal-body">
 				<form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
 					{%csrf_token%}
-					<p style="font-size:160%;"> description <p\>
 						<div class="form-group">
 		  					<input type="email" class="form-control input-lg" placeholder="Email" name="email" required/>
 		  				</div>
 						<div class="form-group">
-							<input type="description" class="form-control input-lg" placeholder="headline" name="headline"  rows="4"></textarea>
+							<input type="description" class="form-control input-lg" placeholder="headline" name="headline" maxlength="30" rows="4"></textarea>
 						</div>
 					<div class="form-group">
 						<textarea type="description" class="form-control input-lg" placeholder="description" name="text" rows="4"></textarea>
