work on work on button

--- a/administration/templates/administration/requests.html
+++ b/administration/templates/administration/requests.html
@@ -1,5 +1,7 @@
 {% extends 'administration/base_admin.html' %}
 {% block content %}
+{% load filter %}
+
 <head>
 
     <style>
@@ -21,13 +23,13 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <h4 class="list-group-item-heading">{{ request.headline }}</h4>
-                        <p class="list-group-item-text">{{ request.text }}</p>
+                        <p class="list-group-item-text">{{ request|get_short_text:130 }}</p>
                     </div>
                     <div class="col-sm-10">
                         <h6><br>by {{ request.email }} from {{ request.create_date }}</h6>
                     </div>
                     <div class="col-sm-2">
-                        <button type="button" class="btn btn-default btn-sml" style="float: right;">work on</button>
+                        <button type="button" class="btn btn-default btn-sml" style="float: right;">Done</button>
                     </div>
                 </div>
             </a>
@@ -63,13 +65,13 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <h4 class="list-group-item-heading">{{ request.headline }}</h4>
-                        <p class="list-group-item-text">{{ request.text }}</p>
+                        <p class="list-group-item-text">{{ request|get_short_text:130 }}</p>
                     </div>
                     <div class="col-sm-10">
                         <h6><br>by {{ request.email }} from {{ request.create_date }}</h6>
                     </div>
                     <div class="col-sm-2">
-                        <button type="button" class="btn btn-default btn-sml" style="float: right;">work on</button>
+                        <button type="button" class="btn btn-default btn-sml" style="float: right;" onclick="add_worker(this)">Work On</button>
                     </div>
                 </div>
             </a>
@@ -97,6 +99,15 @@
         {% endfor %}
 
     </div>
+    <script>
+        function add_worker(element){
+            var id = element.parentElement.parentElement.id;
+            console.log(id)
+            $.post("{% url 'administration:work_on_request' % }", {id:id}, function(data){
+                //no need for this method but if we want to get a callback this is the correct position
+            })
 
+        }
+    </script>
 </div>
 {% endblock %}
