--- a/basics/templates/basics/chat.html
+++ b/basics/templates/basics/chat.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+{% load staticfiles %}
 <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="A demo for the Django Channels">
@@ -27,6 +28,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.blue_grey-blue.min.css" />
+    <link rel="stylesheet" href="{% static 'basics/css/styles.css' %}">
     <script src="https://fb.me/react-15.0.2.js"></script>
     <script src="https://fb.me/react-dom-15.0.2.js"></script>
   </head>
