--- a/basics/templates/basics/needs_all.html
+++ b/basics/templates/basics/needs_all.html
@@ -62,12 +62,15 @@
 
      <ul class="event-list">
        {% for need in needs%}
-       
+
          <li>
-            <time>
-               <div>{{ need.date }}</div>
-             </time>
-            
+            <time datetime="2014-07-20 2000">
+  						 <span class="day">{{ need.date.day }}</span>
+  						 <span class="month">{{need.date.month}}</span>
+  						 <span class="year">2014</span>
+  						 <span class="time">04:20 PM</span>
+  					 </time>
+
            <div class="info">
              <h2 class="title"><a  href="{% url 'basics:needs_view' pk=need.pk %}">{{ need.headline }}</a></h2>
              <p class="desc">{{ need.text }}</p>
@@ -78,9 +81,9 @@
                <li style="width:20%;"><a id="help-link" href="{% url 'basics:chat' %}">Help</a><span class="fa fa-question"></span></li>
              </ul>
            </div>
-          
+
          </li>
-       
+
        {% endfor %}
      </ul>
    </div>
