--- a/administration/templates/administration/categories.html
+++ b/administration/templates/administration/categories.html
@@ -10,6 +10,17 @@
 				<form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
 					{%csrf_token%}
 					<p style="font-size:160%;"> description <p\>
+					{% if messages %}
+    					{% for message in messages %}
+							{% if message.message == 'categorie_exists' %}
+								<div class="form-group">
+									<div class="error-messages">
+    									<p>This Categorie already exists!</p>
+									</div>
+								</div>
+							{% endif %}
+    					{% endfor %}
+					{% endif %}
 					<div class="form-group">
 		  				<input type="name" class="form-control input-lg" placeholder="Categorie Name" name="name" required/>
 		  			</div>
@@ -24,7 +35,17 @@
     <div class="container">
 
         <h2 id="table-headline">Categories</h2>
-
+        {% if messages %}
+    					{% for message in messages %}
+							{% if message.message == 'categorie_sonst' %}
+								<div class="form-group">
+									<div class="error-messages">
+    									<p>Cannot delete sonstige!</p>
+									</div>
+								</div>
+							{% endif %}
+    					{% endfor %}
+					{% endif %}
         <div class="list-group">
             {% for categorie in categories %}
                 <div class="list-group-item">
