--- a/administration/templates/administration/groups.html
+++ b/administration/templates/administration/groups.html
@@ -1,9 +1,90 @@
 {% extends 'administration/base_admin.html' %}
 {% block content %}
+
+        <div class="modal-dialog" id="sign-up">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="text-center">create new Group</h1>
+            </div>
+            <div class="modal-body">
+                <form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
+                    {%csrf_token%}
+                    <p style="font-size:160%;"> description <p\>
+                    {% if messages %}
+                        {% for message in messages %}
+                            {% if message.message == 'wrong_group' %}
+                                <div class="form-group">
+                                    <div class="error-messages">
+                                        <p>Group with this name already exists!</p>
+                                    </div>
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                    {% if messages %}
+                        {% for message in messages %}
+                            {% if message.message == 'wrong_emailAndGroup' %}
+                                <div class="form-group">
+                                    <div class="error-messages">
+                                        <p>Group with this Name already exists and User with this E-Mail doesn't exist!</p>
+                                    </div>
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                    <div class="form-group">
+                        <input type="name" class="form-control input-lg" placeholder="Group Name" name="name" required/>
+                    </div>
+                    {% if messages %}
+                        {% for message in messages %}
+                            {% if message.message == 'wrong_email' %}
+                                <div class="form-group">
+                                    <div class="error-messages">
+                                        <p>User with this E-Mail doesn't exist</p>
+                                    </div>
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                    {% if messages %}
+                        {% for message in messages %}
+                            {% if message.message == 'wrong_form' %}
+                                <div class="form-group">
+                                    <div class="error-messages">
+                                        <p>You need to fill in all Fields!</p>
+                                    </div>
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                    <div class="form-group">
+                        <input type="email" class="form-control input-lg" placeholder="Email from Group User" name="email" required/>
+                    </div>
+                    {% if messages %}
+                        {% for message in messages %}
+                            {% if message.message == 'location_failed' %}
+                                <div class="form-group">
+                                    <div class="error-messages">
+                                        <p>You Need a location for your Group!</p>
+                                    </div>
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                    <div class="form-group">
+                            <p id="choose-location-text">If you do not like to use your standard location choose an other one.
+                        {% include "basics/map_testing.html" %}</p>
+                    </div>  
+
+                    <div class="form-group">
+                        <input type="submit" class="btn btn-block btn-lg btn-primary" value="Create & Send"/>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
 		<div class="container">
-            <a href="{% url 'administration:new_group' %}" class="btn btn-success btn-sm" title="new Group">
-                <span class="glyphicon glyphicon-plus"></span>
-            </a>
             <table class = "table table-hover">
                 <thead>
                     <tr>
