--- a/administration/templates/administration/categories.html
+++ b/administration/templates/administration/categories.html
@@ -1,46 +1,65 @@
 {% extends 'administration/base_admin.html' %}
 {% block content %}
 
-	<div class="modal-dialog" id="sign-up">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h1 class="text-center">create new Categorie</h1>
-			</div>
-			<div class="modal-body">
-				<form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
+<div class="row">
+
+    <!-- first column -->
+    <div class="col-sm-5 col-sm-push-7">
+
+        <!-- create new categorie -->
+        <div id="standard-modal">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="text-center" id="standard-modal-headline">Create new Categories</h2>
+			    </div>
+			    <div class="modal-body">
+				    <form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
 					{%csrf_token%}
-					<p style="font-size:160%;"> description <p\>
-					<div class="form-group">
-		  				<input type="name" class="form-control input-lg" placeholder="Categorie Name" name="name" required/>
-		  			</div>
-					<div class="form-group">
-						<input type="submit" class="btn btn-block btn-lg btn-primary" value="Create & Send"/>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
+					    <div class="form-group">
+		  				    <input type="name" class="form-control input-lg" placeholder="Categorie Name" name="name" required/>
+		  			    </div>
+					    <div class="form-group">
+						    <input id="standard-green-button" type="submit" class="btn btn-block btn-lg btn-primary" value="Create"/>
+					    </div>
+				    </form>
+			    </div>
+		    </div>
+        </div><!-- end create new categorie -->
 
-    <div class="container">
+    </div><!-- end first column -->
 
-        <h2 id="table-headline">Categories</h2>
+    <!-- second column -->
+    <div class="col-sm-7 col-sm-pull-5">
 
-        <div class="list-group">
-            {% for categorie in categories %}
-                <div class="list-group-item">
-                    <div class="row">
-                        <div class="col-sm-10">
-                            {{ categorie.name }}
-                        </div>
-                        <div class="col-sm-2">
-                            <a class="btn btn-default btn-sml" href="{% url 'administration:categories_delete' pk=categorie.pk %}" title="delete"><span class="glyphicon glyphicon-remove"></span></a>
-                        </div>
+        <!-- all categories -->
+        <div id="standard-modal">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="text-center" id="standard-modal-headline">Categories</h2>
+			    </div>
+			    <div class="modal-body">
+                    <div class="list-group">
+                        {% for categorie in categories %}
+                            <div class="list-group-item" id="standard-list-group-item-div">
+                                <div class="row">
+                                    <div class="col-sm-10">
+                                        {{ categorie.name }}
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <a id="standard-green-button-light" class="btn btn-default btn-sml" href="{% url 'administration:categories_delete' pk=categorie.pk %}" style="float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
+                                    </div>
+                                </div>
+                            </div>
+                        {% empty %}
+                            <h4>No categories available. Create some.</h4>
+                        {% endfor %}
                     </div>
                 </div>
-            {% empty %}
-                <h4>No categories available. Create some.</h4>
-            {% endfor %}
-        </div>
+            </div>
+        </div><!-- end all categories -->
 
-    </div>
+    </div><!-- end second column -->
+
+</div><!-- end row -->
+
 {% endblock %}
